# helix-ids

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  demo.sh  exported_model.pt  finding-structured.json  helix-RD.html  phase63_analysis.py  pyproject.toml  pyrightconfig.json  requirements-all-lock.txt  requirements-dev-lock.txt  requirements-lock.txt  requirements.in  requirements.txt
.github/: dependabot.yml
.hermes/: PLAN_2026-07-02_repo-audit-remediation.md
benchmarks/: README.md  baseline.reference.json  cross_dataset_benchmark.py  phase27b.py  phase28a.py  phase28c.py  phase34_transfer_ceiling.py
cleanup/: cleanup_execution.csv  cleanup_execution_report.md  dead_code_report.csv  deleted_cache_files.csv  deleted_duplicates.csv  deleted_files.csv  deletion_manifest.csv  duplicate_checkpoints.csv  duplicate_files.csv  final_classify.py  folder_size_report.csv  generate_audit.py  generate_inventory.py  git_status_snapshot.txt  largest_files.csv  modified_files.txt  phase2_execution.csv  phase5_packaging.md  phase6_separation_strategy.md  release_package.sh  remaining_duplicates.csv  repository_inventory.csv  repository_size_after.csv  unused_scripts.csv
config/: attack_params.yaml  helix_config.yaml  platform_configs.yaml  schema_registry.yaml  training.yaml
data/: README.md  nsl_kdd_5class
docs/: ACTIVE_SYSTEM.md  CHECKPOINT_AUDIT.md  CONTRIBUTION_NARRATIVE.md  DOCUMENTATION_STATUS.md  EXTERNAL_VALIDATION_PLAN.md  FEATURE_ENGINEERING.md  HELIX_FORENSIC_CANONICALIZATION_AUDIT.md  OPERATIONS_DEPLOYMENT_RUNBOOK.md  PAPER_STRUCTURE_SYNTHESIS.md  PHASE4_PHASE5_STATUS.md  PROJECT_REORGANIZATION_PLAN.md  P_Y_GIVEN_X_BOTTLENECK.md  README.md  REPOSITORY_LAYOUT.md  ROOT_CAUSE_IMPLEMENTATION_COMPLETE.md  ROOT_CAUSE_REDUCER.md  SCHEMA_CONTRACT.md  TRACEABILITY_AUDIT.md  UNIFIED_BENCHMARK_DESIGN.md
scripts/: README.md  adversarial_training_v2.py  audit_pipeline_fixes.py  benchmark_e2e_v2_fixed.py  benchmark_helix_quantization.py  check_entrypoint_wrapping.py  check_metrics_contract_bypass.py  create_test_checkpoint.py  demo_root_cause_reducer.py  deploy.py  download_datasets.py  holdout_evaluation_v2.py  parse_promotion_gate_logs.py  phase52_experiments.py  phase52_preprocess.py  phase56_main.py  phase56_report.py  phase57_main.py  process_cicids.py  quantize_helix_lite.py  quantize_helix_micro.py  quick_verify_fixes.py  run_fg.py  safe_repo_cleanup.sh  smoke_save_checkpoint.py  test_phase3_smoke.py  train_edge_models.py  train_helix_ids_full.py  train_multidataset_v2_fixed.py  train_unified_rebalanced.py  train_unsw_only_cleaned.py  unsw_anomaly_analysis.py  validation_ton_iot_contract.py
session_logs/: session_7f267844-9580-47bb-9747-2d9831b72008_20260516_215453.json
src/: __init__.py
tests/: __init__.py  conftest.py  test_adversarial_robustness.py  test_benchmark_formalization.py  test_benchmark_output_validator.py  test_callbacks.py  test_checkpoint_contracts.py  test_coral_loss.py  test_critical_pipeline_invariants.py  test_data_integrity_guards.py  test_data_loading.py  test_dataset_corruption.py  test_e2e_smoke.py  test_entropy_deployment_validation.py  test_export_contract.py  test_export_quantization_deployment.py  test_export_unit.py  (+22 more)
(+660 files in other folders)
